[gd_scene load_steps=11 format=2]

[ext_resource path="res://Menus/GameOver.gd" type="Script" id=1]
[ext_resource path="res://Assets/QuitButton.png" type="Texture" id=2]
[ext_resource path="res://Assets/QuitButton_Click.png" type="Texture" id=3]
[ext_resource path="res://Assets/QuitButton_Hover.png" type="Texture" id=4]
[ext_resource path="res://Assets/QuitButton_disabled.png" type="Texture" id=5]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Assets/digifit.ttf"

[sub_resource type="DynamicFont" id=2]
size = 50
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Assets/digifit.ttf"

[sub_resource type="DynamicFont" id=4]
size = 25
font_data = SubResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 25
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 1 )

[node name="GameOver" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -350.0
margin_top = -214.0
margin_right = 350.0
margin_bottom = 214.0
color = Color( 0.631373, 0.631373, 0.631373, 0.670588 )

[node name="Label" type="Label" parent="ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -170.5
margin_top = 10.0
margin_right = 170.5
margin_bottom = 85.0
custom_fonts/font = SubResource( 2 )
text = "Game Over"

[node name="LineEdit" type="LineEdit" parent="."]
visible = false
margin_left = 448.0
margin_top = 304.0
margin_right = 614.0
margin_bottom = 368.0
custom_fonts/font = SubResource( 4 )
align = 1
max_length = 3
secret_character = "."
expand_to_text_length = true

[node name="Label3" type="Label" parent="LineEdit"]
anchor_right = 1.0
margin_left = -88.0
margin_top = -104.0
margin_right = 97.0
margin_bottom = -66.0
custom_fonts/font = SubResource( 5 )
text = "YOU GOT A HIGH SCORE!"

[node name="Label2" type="Label" parent="LineEdit"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -131.0
margin_top = -48.0
margin_right = 141.0
margin_bottom = -8.0
custom_fonts/font = SubResource( 5 )
text = "Enter your name:"

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
margin_left = 528.0
margin_top = 464.0
margin_right = -170.0
margin_bottom = 502.0
custom_fonts/font = SubResource( 5 )
text = "THANKS FOR PLAYING!"

[node name="ScoreLbl" type="Label" parent="."]
anchor_right = 1.0
margin_left = 176.0
margin_top = 464.0
margin_right = -750.0
margin_bottom = 502.0
custom_fonts/font = SubResource( 5 )
text = "SCORE:"

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 488.0
margin_top = 384.0
margin_right = 581.0
margin_bottom = 428.0
disabled = true
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 4 )
texture_disabled = ExtResource( 5 )

[connection signal="text_changed" from="LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
